--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "axios": "^0.27.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.4.0",
     "react-plx": "^1.3.17",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
