nvm i put the wrong link entirely

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/alexalextran/max-cozis/",
+  "homepage": "https://alexalextran.github.io/max-cozis/",
   "name": "max-cozis",
   "version": "0.1.0",
   "private": true,
