--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^9.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-file-base64": "^1.0.3",
     "react-icons": "^4.4.0",
     "react-plx": "^1.3.17",
     "react-router-dom": "^6.3.0",
