--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.6.2",
     "@testing-library/react": "^12.1.1",
     "@testing-library/user-event": "^12.5.0",
     "axios": "^0.27.2",
